--- a/OX/res/values/strings.xml
+++ b/OX/res/values/strings.xml
@@ -2,15 +2,17 @@
 <resources>
 
     <string name="app_name">OX</string>
-    <string name="action_settings">Settings</string>
     <string name="start_game">Rozpocznij grę</string>
     <string name="end_game">Wyjdź</string>
     <string name="settings">Ustawienia</string>
-    <string name="title_activity_play">PlayActivity</string>
+    <string name="title_activity_play">OX</string>
+    <string name="title_activity_settings">OX - ustawienia</string>
+    <string name="undo">Cofnij</string>
     <string name="draw">Remis</string>
     <string name="winX">Wygrał gracz X</string>
     <string name="winO">Wygrał gracz O</string>
     <string name="activeX">Gracz X</string>
     <string name="activeO">Gracz O</string>
+    <string name="pref_grid_size">Rozmiar planszy</string>
 
 </resources>
